- as default excerpt, img alignment fix

--- a/sass/_article-contents/a-img.scss
+++ b/sass/_article-contents/a-img.scss
@@ -33,8 +33,9 @@ img {
      need any more
   */
 
-  p &:only-child {
-    margin: 0;
+  p & {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
